[gd_scene load_steps=2 format=3 uid="uid://cn1pfmba77kb1"]

[ext_resource type="Script" path="res://scripts/editor/EditorUI.gd" id="1_q5e6r"]

[node name="EditorUI" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q5e6r")

[node name="TopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2

[node name="Title" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -11.5
offset_right = 173.0
offset_bottom = 11.5
grow_vertical = 2
text = "Farm Editor Mode"

[node name="CurrencyLabel" type="Label" parent="TopPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -124.0
offset_top = -11.5
offset_right = -20.0
offset_bottom = 11.5
grow_horizontal = 0
grow_vertical = 2
text = "Currency: 1000"
horizontal_alignment = 2

[node name="LeftPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_top = 50.0
offset_right = 200.0
offset_bottom = -60.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Tile Types:"
horizontal_alignment = 1

[node name="RegularButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Regular Ground"

[node name="DirtButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Dirt Ground (100)"

[node name="SoilButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Soil (150)"

[node name="WaterButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Water (250)"

[node name="MudButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Mud (150)"

[node name="DeliveryButton" type="Button" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Delivery (300)"

[node name="HSeparator" type="HSeparator" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="SelectedTileLabel" type="Label" parent="LeftPanel/VBoxContainer"]
layout_mode = 2
text = "Selected: None"
horizontal_alignment = 1

[node name="BottomPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -60.0
grow_horizontal = 2
grow_vertical = 0

[node name="CancelButton" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 20.0
offset_top = -15.0
offset_right = 120.0
offset_bottom = 15.0
grow_vertical = 2
text = "Cancel"

[node name="SaveButton" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 140.0
offset_top = -15.0
offset_right = 240.0
offset_bottom = 15.0
grow_vertical = 2
text = "Save Changes"

[node name="StartButton" type="Button" parent="BottomPanel"]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -20.0
offset_right = -20.0
offset_bottom = 20.0
grow_horizontal = 0
grow_vertical = 2
text = "Start Next Run"

[node name="TileHighlighter" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="TileHighlighter"]
